# Kmining

./: CMakeLists.txt  README.md  start_linux.sh  start_windows.bat
src/: AlgoEtchash.cpp  AlgoEtchash.h  AlgoKawPow.cpp  AlgoKawPow.h  AutoSwitcher.cpp  AutoSwitcher.h  IAlgorithm.h  WebServer.cpp  WebServer.h  kernel.cu  kernel.h  logger.cpp  logger.h  main.cpp  stratum_client.cpp  stratum_client.h
tests/: test_kernel.cpp  test_main.cpp  test_stratum_client.cpp
